--- a/src/app/shared/components/day-layout/day-layout.scss
+++ b/src/app/shared/components/day-layout/day-layout.scss
@@ -98,6 +98,8 @@
     margin: 12px 0;
     border-radius: 12px;
     font-style: italic;
+    max-height: 300px;
+    overflow-y: scroll;
 }
 
 .btn {
